src/home/components/Splash/styles/splash.scss
@mixin wrapper($name, $float, $width) {
  .#{$name} {
    width: $width;
  }

  .#{$name}::before {
    content: '';
    float: $float;
    padding-bottom: $width / 8;
  }

  .#{$name} {
    clear: both;
    content: '';
    display: table;
  }
}

@keyframes blink {
  @for $i from 0 through 100 {
    $expr: if($i < 40 and $i % 5 == 0, #fffffa, #2e2f30);

    #{$i*1%} {
      color: $expr;
    }
  } 
}

@keyframes blink-2 {
  0% { color: #2e2f30; }
  45% { color: #2e2f30; }
  50% { color: #d7dfde; }
  55% { color: #d7dfde; }
  65% { color: #2e2f30; }
  100% { color: #2e2f30; }
}

@keyframes bounce {
  0%,
  30%,
  100% { transform: translateY(0); }
  65% { transform: translateY(-10px); }
}

@include wrapper(container, left, 100%);

.container {
  overflow: hidden;
  padding: 0 0 6em;
}

.container1 { 
  background-color: #2e2f30;
  padding: 8em 0 5em;
}

.container1::after {
  background: linear-gradient(45deg, transparent 75%, #2e2f30 76%) 0 50%,
    linear-gradient(-45deg, transparent 75%, #2e2f30 76%) 0 50%;
  background-repeat: repeat-x;
  background-size: 1em 1em, 1em 1em;
  content: ' ';
  display: block;
  height: 1em;
  position: relative;
  bottom: -6em;
  width: 100%;
  z-index: 1;
}

.arrow-container {
  font-size: 2vw;
}

.arrow-right {
  display: block;
  height: 10%;
  margin: 5.5vw auto 0;
  width: 30%;
}

.arrow-1 {
  animation: blink 20s infinite 0.75s;
}

.arrow-2 {
  animation: blink-2 20s infinite;
}

.down-arrow {
  animation: bounce 4s infinite;
  color: #d7dfde;
  font-size: 2em;
}

.arrow-wrapper {
  display: block;
  margin: 0 auto;
  position: relative;
  width: 1em;
}

